# ayo

./: Cargo.toml  LICENSE  PKGBUILD  README.md  ayo.service  ayo.toml
examples/: apps.toml  gui.toml  types.toml
src/: cli.rs  config.rs  main.rs  process.rs  util.rs
