[package]
name = "ayo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.6", features = ["derive"] }
glob = "0.3.0"
log = "0.4.17"
env_logger = "0.9.1"
procfs = "0.14.1"
merge = "0.1.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_regex = "1.1.0"
toml = "0.5.9"
anyhow = "1.0.65"
regex = "1.6.0"
libc = "0.2"
ioprio = "0.2.0"
